[package]
name = "advent2018"
version = "0.1.0"
authors = ["Maksim Vykhota <m.vykhota@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
regex = "1.2.1"
itertools = "0.8.0"

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.test]
overflow-checks = false
opt-level = 2

[profile.release]
overflow-checks = false
opt-level = 2